# ifj-project

./: .clang-format  .gitattributes  .gitignore  .gitmodules  FSM.gv  Makefile  README.md  buildin.c  buildin.h  error.c  error.h  exp.c  exp.h  gen.c  gen.h  main.c  parser.c  parser.h  rozdeleni  rozsireni  scanner.c  scanner.h  stack.c  stack.h  str.c  str.h  symtable.c  symtable.h  token.c  token.h  token_term.c  token_term.h
.github/workflows/: c.yml
doc/: comp.php  comparisons.txt  dokumentace.tex  ll.txt  table.txt
examples/: examples.sh
php/: bug1.php  test.ifjc22  test.php
test/: CMakeLists.txt  factorial.php  factorial_iterative.php  for.php  intro.php  test.cpp  test.ifjc22  test.php  tests.cpp
